--- a/news.html
+++ b/news.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="ext_menu-5a" data-rv-view="144">
+<section id="ext_menu-5a" data-rv-view="319">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5z" data-rv-view="142" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5z" data-rv-view="317" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -69,7 +69,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-7w" data-rv-view="146" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-7w" data-rv-view="321" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -80,7 +80,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="msg-box5-7z" data-rv-view="148" style="padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section" id="msg-box5-7z" data-rv-view="323" style="padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -110,7 +110,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-7v" data-rv-view="153" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-7v" data-rv-view="328" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -120,7 +120,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-7x" data-rv-view="155" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-7x" data-rv-view="330" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -130,7 +130,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4z" data-rv-view="151" style="background-color: rgb(255, 255, 255); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4z" data-rv-view="326" style="background-color: rgb(40, 50, 78); padding-top: 2.625rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br><br></p>
