--- a/page23.html
+++ b/page23.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="ext_menu-7o" data-rv-view="311">
+<section id="ext_menu-7o" data-rv-view="611">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/d">website software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-7q" data-rv-view="315" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/h">make your own website</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-7q" data-rv-view="615" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -69,7 +69,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-7r" data-rv-view="317" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-7r" data-rv-view="617" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -79,7 +79,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-7s" data-rv-view="319" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-7s" data-rv-view="619" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -89,7 +89,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-7p" data-rv-view="313" style="background-color: rgb(255, 255, 255); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-7p" data-rv-view="613" style="background-color: rgb(40, 50, 78); padding-top: 2.625rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br><br></p>
