--- a/page24.html
+++ b/page24.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="ext_menu-80" data-rv-view="321">
+<section id="ext_menu-80" data-rv-view="621">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -59,7 +59,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/g">create a website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/n">bootstrap modal form</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
