--- a/page6.html
+++ b/page6.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="mbr-section mbr-section__container article" id="header3-21" data-rv-view="157" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 40px;">
+<section class="mbr-section mbr-section__container article" id="header3-21" data-rv-view="343" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 40px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -35,7 +35,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">website builder</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features7-22" data-rv-view="159" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap dropdown</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features7-22" data-rv-view="345" style="background-color: rgb(239, 239, 239);">
 
     
 
@@ -97,7 +97,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-26" data-rv-view="162" style="background-color: rgb(239, 239, 239); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-26" data-rv-view="348" style="background-color: rgb(239, 239, 239); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
